feat: show Jotter system information in settings panel
